2010-01-03  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFont.c (Tk_TextLayoutToPostscript):	Simplified the code to
	* generic/tkCanvPs.c (TkCanvPostscriptCmd):	generate the preamble
	* library/mkpsenc.tcl:				for PS generation and
	also simplify the code to output text following the observation that
	it effectively only produces ASCII anyway, even when it might have the
	option to do otherwise in theory.

2010-01-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/tearoff.tcl: tearoff menus should be transient and use the
	                       toolwindow style on Windows.
	* tests/menu.test: menu tests using 'tkwait visibility' are unix only.

2010-01-02  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixEvent.c (TransferXEventsToTcl): [Bug 1924761]: Use the
	new cache mechanism to force the extraction of the string of a key
	event from XIM at the right time rather than after queueing when it
	can be quashed by a race condition centered on the limited amount of
	state in some XIM implementations.

	* unix/tkUnixKey.c (TkpGetString): [Bug 1373712]: Cache the value that
	* generic/tkInt.h (TkKeyEvent):		will be substituted via %A so
	* generic/tkEvent.c (CleanUpTkEvent):	that we do not need to make it
	* doc/HandleEvent.3 (ARGUMENTS):	fresh each time, which causes
	* doc/QWinEvent.3 (ARGUMENTS):		trouble with some input
	* carbon/tkMacOSXKeyEvent.c (InitKeyEvent): methods. Also includes the
	* macosx/tkMacOSXKeyEvent.c (tkProcessKeyEvent): factoring out of some
	* win/tkWinX.c (GenerateXEvent):	code and update of
	documentation to describe the slightly increased constraints on
	how Tk_HandleEvent can be used.

2010-01-01  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixEvent.c (TransferXEventsToTcl): [Bug 1924761]: Move the
	* generic/tkEvent.c (Tk_HandleEvent):	     passing of key events to
	XFilterEvent to the low level point where all other events are
	handled, where it should have been all along. This makes more input